feat: Add Hashid encoding for user IDs, enhance application properties, and update database schema
- Implemented Hashid encoding for user IDs in UserService to improve security.
- Updated application.properties to include configurations for Hashids.
- Added target_id column to notifications table for action URL rewriting.
- Removed outdated seed data script to streamline database initialization.
- Deleted unnecessary submission file to clean up storage.